# gp_torque_compensation

./: .gitignore
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/install/: local_setup.sh  setup.sh
custom_msgs/log/: latest_build
custom_msgs/msg/: DataForGP.msg  LambdaCommand.msg  MotorCommand.msg  RobotTransformation.msg  StateParameter.msg
custom_msgs/srv/: GPPredict.srv  JointPositionAdjust.srv
endowrist_control/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
endowrist_control/cmake/modules/: FindNumPy.cmake
endowrist_control/example_config/: endoWrist.yaml  setup.yaml
endowrist_control/example_config/device_configurations/: maxon.yaml
endowrist_control/include/endowrist_control/ethercat_device_configurator/: EthercatDeviceConfigurator.hpp  multiProcessingUtils.hh
endowrist_control/launch/: endowrist_control.launch.py
endowrist_control/src/: EthercatDeviceConfigurator.cpp  endowrist_control_node.cpp  endowrist_control_node_callback.cpp
ethercat_sdk_master/: .gitignore  CMakeLists.txt  LICENSE  README.md  jenkins-pipeline  package.xml
ethercat_sdk_master/include/ethercat_sdk_master/: EthercatDevice.hpp  EthercatMaster.hpp  EthercatMasterConfiguration.hpp  UpdateMode.hpp
ethercat_sdk_master/src/ethercat_sdk_master/: EthercatDevice.cpp  EthercatMaster.cpp
franka_ros2/: CHANGELOG.md  Dockerfile  Jenkinsfile  NOTICE  README.md
franka_ros2/franka_bringup/: CMakeLists.txt  package.xml
franka_ros2/franka_bringup/config/: controllers.yaml
franka_ros2/franka_bringup/launch/: cartesian_velocity_example_controller.launch.py  elbow_example_controller.launch.py  franka.launch.py  gravity_compensation_example_controller.launch.py  joint_impedance_example_controller.launch.py  joint_position_example_controller.launch.py  joint_velocity_example_controller.launch.py  joint_velocity_rcm_controller.launch.py  model_example_controller.launch.py  (+1 more)
franka_ros2/franka_description/: CMakeLists.txt  package.xml
franka_ros2/franka_example_controllers/: CMakeLists.txt  franka_example_controllers.xml  package.xml
franka_ros2/franka_gripper/: CMakeLists.txt  package.xml
franka_ros2/franka_hardware/: CMakeLists.txt  franka_hardware.xml  package.xml
franka_ros2/franka_moveit_config/: CMakeLists.txt  package.xml
franka_ros2/franka_msgs/: CMakeLists.txt  package.xml
franka_ros2/franka_robot_state_broadcaster/: CMakeLists.txt  franka_robot_state_broadcaster.xml  package.xml
franka_ros2/franka_semantic_components/: CMakeLists.txt  package.xml
franka_ros2/integration_launch_testing/: CMakeLists.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
maxon_epos_ethercat_sdk/: .gitignore  CMakeLists.txt  Contributing.md  LICENSE  README.md  package.xml
maxon_epos_ethercat_sdk/doc/: Usage.md
maxon_epos_ethercat_sdk/example_configs/: Maxon.yaml
maxon_epos_ethercat_sdk/include/maxon_epos_ethercat_sdk/: Command.hpp  Configuration.hpp  ConfigurationParser.hpp  Controlword.hpp  DriveState.hpp  Error.hpp  Maxon.hpp  ModeOfOperationEnum.hpp  ObjectDictionary.hpp  PdoTypeEnum.hpp  Reading.hpp  RxPdo.hpp  Statusword.hpp  TxPdo.hpp
maxon_epos_ethercat_sdk/src/maxon_epos_ethercat_sdk/: Command.cpp  Configuration.cpp  ConfigurationParser.cpp  ConfigureParameters.cpp  Controlword.cpp  Diagnostics.cpp  DriveState.cpp  Maxon.cpp  ModeOfOperationEnum.cpp  PdoTypeEnum.cpp  Reading.cpp  Statusword.cpp
message_logger/: .gitignore  CHANGELOG.rst  CMakeLists.txt  CMakeLists_catkin.txt  package.xml
message_logger/cmake/: message_logger.cmake
message_logger/include/message_logger/: message_logger.hpp
message_logger/include/message_logger/common/: colors.hpp  preprocessor_defines.hpp  source_file_pos.hpp
message_logger/include/message_logger/log/: log_messages.hpp  log_messages_backend.hpp  log_messages_backend_config.hpp.in  log_messages_ros.hpp  log_messages_std.hpp
message_logger/include/message_logger/time/: Time.hpp  TimeStd.hpp
message_logger/src/time/: Time.cpp  TimeStd.cpp
message_logger/test/: EmptyTests.cpp
motor_sender/: CMakeLists.txt  package.xml
new_controllers/: CMakeLists.txt  new_controllers.xml  package.xml
new_controllers/include/new_controllers/: joint_velocity_rcm_controller.hpp
new_controllers/src/: joint_velocity_rcm_controller.cpp  rcm_kinematics.cpp
new_structure/cpp_relayer/: CMakeLists.txt  cpp_relayer.xml  package.xml
new_structure/gp/: build_dataset.py  gp_train_data_per_joint.npz  hyperparam_training.py  train_gp.py
new_structure/icra_gp/: package.xml  setup.cfg  setup.py
new_structure/icra_plot/: package.xml  setup.cfg  setup.py
new_structure/new_bringup/: CMakeLists.txt  package.xml
new_structure/new_controllers/: CMakeLists.txt  new_controllers.xml  package.xml
new_structure/plot_data/: package.xml  setup.cfg  setup.py
new_structure/py_controllers/: package.xml  setup.cfg  setup.py
new_structure/py_controllers/launch/: cartesian_impedance_icra_launch.py  cartesian_impedance_lambda_launch.py  cartesian_impedance_launch.py  cartesian_model_free_launch.py  effort_pd_launch.py
new_structure/py_controllers/py_controllers/: cartesian_impedance.py  cartesian_model_free.py  effort_pd.py  plot_data.py  skygp_model.py  trajectory_eclipse.py  trajectory_eclipse_publisher.py  trajectory_publisher.py  trajectory_publisher_icra.py  trajectory_publisher_lambda.py
soem_interface/: .gitignore  README.md  jenkins-pipeline
soem_interface/soem/: .gitignore  CMakeLists.txt  CMakeLists_copy.txt  ChangeLog  Doxyfile  README.md
soem_interface/soem_interface/: CMakeLists copy.txt  CMakeLists.txt  package.xml
soem_interface/soem_interface/include/soem_interface/: EthercatBusBase.hpp  EthercatBusManagerBase.hpp  EthercatSlaveBase.hpp
soem_interface/soem_interface/include/soem_interface/common/: Macros.hpp  ThreadSleep.hpp
soem_interface/soem_interface/src/soem_interface/: EthercatBusBase.cpp  EthercatBusManagerBase.cpp  EthercatSlaveBase.cpp
soem_interface/soem_interface/src/soem_interface/common/: Macros.cpp  ThreadSleep.cpp
(+315 files in other folders)
