<?xml version="1.0"?>
<package format="2">
  <name>message_logger</name>
  <version>0.2.0</version>
  <description>The message logger package</description>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <license>BSD</license>
  <author email="cgehring@anybotics.com">Christian Gehring</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <test_depend>ament_cmake_gtest</test_depend>
<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>

